docs/versions/tech/v9.0/backend.md
# BRIDGE - Backend 기술 문서 v9.0

> 이 문서는 BRIDGE 서비스의 Backend 엔티티, API, 서비스 로직을 정의합니다.
>
> **관련 문서**
> - [아키텍처 개요](./architecture.md)
> - [Frontend 기술 문서](./frontend.md)

---

## 1. 핵심 변경사항 (v9.0)

### 1.1 신규 도메인
- **DailyChecklist**: 날짜별 체크리스트 할당 및 멤버별 우선순위 관리

### 1.2 신규 API
- `GET /boards/{boardId}/daily-checklists` - 날짜별 데일리 체크리스트 조회
- `POST /boards/{boardId}/daily-checklists` - 기존 체크리스트 항목 추가
- `POST /boards/{boardId}/daily-checklists/with-item` - 새 체크리스트 생성 + 추가
- `PUT /boards/{boardId}/daily-checklists/{itemId}/position` - 우선순위 변경
- `DELETE /boards/{boardId}/daily-checklists/{itemId}` - 항목 제거

---

## 2. 엔티티 정의

### 2.1 DailyChecklist 엔티티 ← v9.0 신규

```java
@Entity
@Table(name = "daily_checklists", uniqueConstraints = {
    @UniqueConstraint(columnNames = {"board_id", "checklist_item_id", "assigned_date"})
})
public class DailyChecklist extends BaseTimeEntity {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "board_id", nullable = false)
    private Board board;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "checklist_item_id")
    private ChecklistItem checklistItem;  // nullable - 삭제 시에도 유지

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "assignee_id", nullable = false)
    private User assignee;

    @Column(name = "assigned_date", nullable = false)
    private LocalDate assignedDate;

    @Column(name = "position", nullable = false)
    @Builder.Default
    private Integer position = 0;

    @Column(name = "title", nullable = false, length = 200)
    private String title;  // checklistItem 삭제 시에도 유지되는 백업

    // 메서드
    public void updatePosition(Integer newPosition) {
        if (newPosition != null && newPosition >= 0) {
            this.position = newPosition;
        }
    }

    public void unlinkChecklistItem() {
        this.checklistItem = null;
    }

    public boolean hasChecklistItem() {
        return this.checklistItem != null;
    }

    public static DailyChecklist create(
        Board board,
        ChecklistItem checklistItem,
        User assignee,
        LocalDate assignedDate,
        Integer position
    ) {
        return DailyChecklist.builder()
            .id(UUID.randomUUID().toString())
            .board(board)
            .checklistItem(checklistItem)
            .assignee(assignee)
            .assignedDate(assignedDate)
            .position(position)
            .title(checklistItem.getTitle())
            .build();
    }
}
```

### 2.2 User 엔티티

```java
@Entity
@Table(name = "users")
public class User extends BaseTimeEntity {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @Column(name = "email", nullable = false, unique = true)
    private String email;

    @Column(name = "password_hash")
    private String passwordHash;

    @Column(name = "name", nullable = false, length = 100)
    private String name;

    @Column(name = "profile_image", length = 500)
    private String profileImage;

    @Column(name = "auth_provider", length = 20)
    @Builder.Default
    private String authProvider = "email";

    @Column(name = "auth_provider_id")
    private String authProviderId;

    @Column(name = "last_login_at")
    private LocalDateTime lastLoginAt;

    @Column(name = "email_verified", nullable = false)
    @Builder.Default
    private Boolean emailVerified = false;

    @Column(name = "email_verified_at")
    private LocalDateTime emailVerifiedAt;

    @Column(name = "theme", length = 20)
    @Builder.Default
    private String theme = "dark";

    // 메서드
    public void verifyEmail() {
        this.emailVerified = true;
        this.emailVerifiedAt = LocalDateTime.now();
    }

    public void updateTheme(String theme) {
        if (theme != null && (theme.equals("dark") || theme.equals("light"))) {
            this.theme = theme;
        }
    }

    public void updatePassword(String passwordHash) {
        this.passwordHash = passwordHash;
    }
}
```

### 2.3 EmailVerificationToken 엔티티

```java
@Entity
@Table(name = "email_verification_tokens")
public class EmailVerificationToken {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_id", nullable = false)
    private User user;

    @Column(name = "token", nullable = false, unique = true, length = 64)
    private String token;

    @Column(name = "expires_at", nullable = false)
    private LocalDateTime expiresAt;

    @Column(name = "created_at", nullable = false)
    private LocalDateTime createdAt;

    @Column(name = "used_at")
    private LocalDateTime usedAt;

    public static EmailVerificationToken create(User user, int expirationHours) {
        return EmailVerificationToken.builder()
                .user(user)
                .token(UUID.randomUUID().toString().replace("-", ""))
                .expiresAt(LocalDateTime.now().plusHours(expirationHours))
                .createdAt(LocalDateTime.now())
                .build();
    }

    public boolean isValid() {
        return !isExpired() && !isUsed();
    }

    public boolean isExpired() {
        return LocalDateTime.now().isAfter(this.expiresAt);
    }

    public boolean isUsed() {
        return this.usedAt != null;
    }

    public void markAsUsed() {
        this.usedAt = LocalDateTime.now();
    }
}
```

### 2.4 PasswordResetToken 엔티티

```java
@Entity
@Table(name = "password_reset_tokens")
public class PasswordResetToken {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_id", nullable = false)
    private User user;

    @Column(name = "token", nullable = false, unique = true, length = 64)
    private String token;

    @Column(name = "expires_at", nullable = false)
    private LocalDateTime expiresAt;

    @Column(name = "created_at", nullable = false)
    private LocalDateTime createdAt;

    @Column(name = "used_at")
    private LocalDateTime usedAt;

    public static PasswordResetToken create(User user, int expirationHours) {
        return PasswordResetToken.builder()
                .user(user)
                .token(UUID.randomUUID().toString().replace("-", ""))
                .expiresAt(LocalDateTime.now().plusHours(expirationHours))
                .createdAt(LocalDateTime.now())
                .build();
    }

    public boolean isValid() {
        return !isExpired() && !isUsed();
    }
}
```

### 2.5 Task 엔티티

```java
@Entity
@Table(name = "tasks")
public class Task extends BaseTimeEntity {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "feature_id", nullable = false)
    private Feature feature;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "board_id", nullable = false)
    private Board board;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "block_id", nullable = false)
    private Block block;

    @Column(name = "title", nullable = false, length = 200)
    private String title;

    @Column(name = "description", columnDefinition = "TEXT")
    private String description;

    @Column(name = "start_date")
    private LocalDate startDate;

    @Column(name = "due_date")
    private LocalDate dueDate;

    @Column(name = "estimated_minutes")
    private Integer estimatedMinutes;

    @Column(name = "is_completed", nullable = false)
    @Builder.Default
    private Boolean isCompleted = false;

    @Column(name = "position", nullable = false)
    @Builder.Default
    private Integer position = 0;

    @Column(name = "completed_at")
    private LocalDateTime completedAt;

    // 블록 이동 시 자동 완료 처리
    public void moveToBlock(Block newBlock) {
        boolean wasCompleted = this.isCompleted;
        this.block = newBlock;

        if (newBlock.isDoneBlock() && !wasCompleted) {
            this.isCompleted = true;
            this.completedAt = LocalDateTime.now();
            this.feature.incrementCompletedTasks();
        } else if (!newBlock.isDoneBlock() && wasCompleted) {
            this.isCompleted = false;
            this.completedAt = null;
            this.feature.decrementCompletedTasks();
        }
    }
}
```

### 2.6 WeightLevel 엔티티

```java
@Entity
@Table(name = "weight_levels")
public class WeightLevel extends BaseTimeEntity {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "board_id", nullable = false)
    private Board board;

    @Column(name = "name", nullable = false, length = 50)
    private String name;

    @Column(name = "weight", nullable = false)
    private Double weight;

    @Column(name = "color", length = 20)
    private String color;

    @Column(name = "position", nullable = false)
    @Builder.Default
    private Integer position = 0;

    @Column(name = "is_default", nullable = false)
    @Builder.Default
    private Boolean isDefault = false;

    public void update(String name, Double weight, String color, Integer position) {
        if (name != null) this.name = name;
        if (weight != null) this.weight = weight;
        if (color != null) this.color = color;
        if (position != null) this.position = position;
    }
}
```

### 2.7 TaskWeight 엔티티

```java
@Entity
@Table(name = "task_weights")
public class TaskWeight extends BaseTimeEntity {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "task_id", nullable = false)
    private Task task;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "weight_level_id", nullable = false)
    private WeightLevel weightLevel;

    public void updateWeightLevel(WeightLevel weightLevel) {
        this.weightLevel = weightLevel;
    }

    public static TaskWeight create(Task task, WeightLevel weightLevel) {
        return TaskWeight.builder()
                .task(task)
                .weightLevel(weightLevel)
                .build();
    }
}
```

### 2.8 MilestoneAllocation 엔티티

```java
@Entity
@Table(name = "milestone_allocations", uniqueConstraints = {
    @UniqueConstraint(columnNames = {"milestone_id", "member_id"})
})
public class MilestoneAllocation extends BaseTimeEntity {

    @Id
    @Column(name = "id", length = 36)
    private String id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "milestone_id", nullable = false)
    private Milestone milestone;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "member_id", nullable = false)
    private User member;

    @Column(name = "working_days", nullable = false)
    private Integer workingDays;

    @Column(name = "total_allocated_hours", nullable = false)
    private Double totalAllocatedHours;

    public void updateAllocation(Integer workingDays, Double totalAllocatedHours) {
        if (workingDays != null) this.workingDays = workingDays;
        if (totalAllocatedHours != null) this.totalAllocatedHours = totalAllocatedHours;
    }
}
```

---

## 3. API 명세

### 3.1 Daily Checklist API ← v9.0 신규

**Base Path**: `/api/v1/boards/{boardId}/daily-checklists`

| Method | Endpoint | 설명 |
|--------|----------|------|
| GET | `?date={date}` | 특정 날짜의 데일리 체크리스트 조회 |
| POST | `/` | 기존 체크리스트 항목 추가 |
| POST | `/with-item` | 새 체크리스트 생성하며 추가 |
| PUT | `/{itemId}/position` | 우선순위(position) 변경 |
| DELETE | `/{itemId}` | 데일리 체크리스트에서 제거 |

**Request/Response**:

```java
// GET ?date=2026-01-17 Response
{
    "date": "2026-01-17",
    "columns": [
        {
            "member": {
                "id": "user-1",
                "name": "김개발",
                "profile_image": "https://..."
            },
            "items": [
                {
                    "id": "dc-1",
                    "checklist_item_id": "cl-1",
                    "title": "JWT 토큰 구현",
                    "is_completed": false,
                    "position": 0,
                    "feature": {
                        "id": "f-1",
                        "title": "로그인 기능",
                        "color": "#8B5CF6"
                    },
                    "task": {
                        "id": "t-1",
                        "title": "인증 API 개발"
                    }
                }
            ]
        }
    ]
}

// POST / Request (기존 체크리스트 추가)
{
    "checklist_item_id": "cl-1",
    "assigned_date": "2026-01-17"
}

// POST /with-item Request (새 체크리스트 생성하며 추가)
{
    "task_id": "t-1",
    "title": "새 체크리스트 항목",
    "assignee_id": "user-1",
    "assigned_date": "2026-01-17"
}

// PUT /{itemId}/position Request
{
    "new_position": 2
}
```

### 3.2 Auth API

**Base Path**: `/api/v1/auth`

| Method | Endpoint | 설명 |
|--------|----------|------|
| POST | `/signup` | 회원가입 |
| POST | `/login` | 로그인 |
| POST | `/google` | 구글 소셜 로그인 |
| POST | `/refresh` | 토큰 갱신 |
| POST | `/logout` | 로그아웃 |
| GET | `/me` | 현재 사용자 정보 |
| GET | `/verify-email` | 이메일 인증 |
| POST | `/resend-verification` | 인증 이메일 재발송 |
| POST | `/forgot-password` | 비밀번호 재설정 요청 |
| POST | `/reset-password` | 비밀번호 재설정 |

### 3.3 User API

**Base Path**: `/api/v1/users`

| Method | Endpoint | 설명 |
|--------|----------|------|
| GET | `/me` | 현재 사용자 정보 조회 |
| PATCH | `/me` | 프로필 수정 (이름, 테마) |
| POST | `/me/password` | 비밀번호 변경 |
| DELETE | `/me` | 계정 삭제 |

### 3.4 Weight Level API

**Base Path**: `/api/v1/boards/{boardId}`

| Method | Endpoint | 설명 |
|--------|----------|------|
| GET | `/weight-levels` | 가중치 레벨 목록 조회 |
| PUT | `/weight-levels` | 가중치 레벨 전체 수정 |
| POST | `/tasks/{taskId}/weight` | Task 가중치 설정 |
| GET | `/tasks/{taskId}/weight` | Task 가중치 조회 |

### 3.5 Statistics API

**Base Path**: `/api/v1/boards/{boardId}/statistics`

| Method | Endpoint | 설명 |
|--------|----------|------|
| GET | `/` | 보드 전체 통계 |
| GET | `/personal` | 개인 통계 |
| GET | `/management` | 관리 대시보드 통계 |

---

## 4. Repository 쿼리

### 4.1 DailyChecklistRepository ← v9.0 신규

```java
public interface DailyChecklistRepository extends JpaRepository<DailyChecklist, String> {

    // 특정 날짜의 데일리 체크리스트 (JOIN FETCH로 N+1 방지)
    @Query("SELECT dc FROM DailyChecklist dc " +
           "JOIN FETCH dc.assignee " +
           "LEFT JOIN FETCH dc.checklistItem ci " +
           "LEFT JOIN FETCH ci.task t " +
           "LEFT JOIN FETCH t.feature " +
           "WHERE dc.board.id = :boardId AND dc.assignedDate = :date " +
           "ORDER BY dc.assignee.id, dc.position ASC")
    List<DailyChecklist> findByBoardIdAndAssignedDateOrderByPositionAsc(
        @Param("boardId") String boardId,
        @Param("date") LocalDate date
    );

    // 담당자별 필터링
    @Query("SELECT dc FROM DailyChecklist dc " +
           "WHERE dc.board.id = :boardId " +
           "AND dc.assignedDate = :date " +
           "AND dc.assignee.id = :assigneeId " +
           "ORDER BY dc.position ASC")
    List<DailyChecklist> findByBoardIdAndAssignedDateAndAssigneeIdOrderByPositionAsc(
        @Param("boardId") String boardId,
        @Param("date") LocalDate date,
        @Param("assigneeId") String assigneeId
    );

    // 최대 position 조회
    @Query("SELECT COALESCE(MAX(dc.position), -1) FROM DailyChecklist dc " +
           "WHERE dc.board.id = :boardId " +
           "AND dc.assignedDate = :date " +
           "AND dc.assignee.id = :assigneeId")
    Integer findMaxPositionByBoardIdAndAssignedDateAndAssigneeId(
        @Param("boardId") String boardId,
        @Param("date") LocalDate date,
        @Param("assigneeId") String assigneeId
    );

    // 중복 체크
    boolean existsByBoardIdAndChecklistItemIdAndAssignedDate(
        String boardId,
        String checklistItemId,
        LocalDate assignedDate
    );

    // ChecklistItem 연결 해제 (ChecklistItem 삭제 시)
    @Modifying
    @Query("UPDATE DailyChecklist dc SET dc.checklistItem = null " +
           "WHERE dc.checklistItem.id = :checklistItemId")
    void unlinkByChecklistItemId(@Param("checklistItemId") String checklistItemId);
}
```

### 4.2 TaskRepository

```java
public interface TaskRepository extends JpaRepository<Task, String> {

    List<Task> findByBoardIdOrderByPositionAsc(String boardId);
    List<Task> findByFeatureIdOrderByPositionAsc(String featureId);

    @Query("SELECT t FROM Task t WHERE t.feature.id IN :featureIds ORDER BY t.position ASC")
    List<Task> findByFeatureIds(@Param("featureIds") List<String> featureIds);

    @Query("SELECT t FROM Task t WHERE t.board.id = :boardId " +
           "AND t.isCompleted = false AND t.dueDate < CURRENT_DATE")
    List<Task> findOverdueTasks(@Param("boardId") String boardId);

    @Query("SELECT t FROM Task t WHERE t.board.id = :boardId " +
           "AND t.isCompleted = false AND t.updatedAt < :thresholdDate")
    List<Task> findStagnantTasks(
        @Param("boardId") String boardId,
        @Param("thresholdDate") LocalDateTime thresholdDate
    );
}
```

### 4.3 WeightLevelRepository

```java
public interface WeightLevelRepository extends JpaRepository<WeightLevel, String> {

    List<WeightLevel> findByBoardIdOrderByPositionAsc(String boardId);

    Optional<WeightLevel> findByBoardIdAndIsDefaultTrue(String boardId);

    boolean existsByBoardId(String boardId);
}
```

### 4.4 TaskWeightRepository

```java
public interface TaskWeightRepository extends JpaRepository<TaskWeight, String> {

    Optional<TaskWeight> findByTaskId(String taskId);

    @Query("SELECT tw FROM TaskWeight tw JOIN FETCH tw.weightLevel WHERE tw.task.id = :taskId")
    Optional<TaskWeight> findByTaskIdWithWeightLevel(@Param("taskId") String taskId);

    @Query("SELECT tw FROM TaskWeight tw JOIN FETCH tw.weightLevel WHERE tw.task.id IN :taskIds")
    List<TaskWeight> findByTaskIdsWithWeightLevel(@Param("taskIds") List<String> taskIds);
}
```

---

## 5. Service 핵심 로직

### 5.1 DailyChecklistService ← v9.0 신규

```java
@Service
@RequiredArgsConstructor
public class DailyChecklistService {

    private final DailyChecklistRepository dailyChecklistRepository;
    private final ChecklistItemRepository checklistItemRepository;
    private final BoardRepository boardRepository;
    private final UserRepository userRepository;

    /**
     * 특정 날짜의 데일리 체크리스트를 멤버별로 그룹화하여 반환
     */
    @Transactional(readOnly = true)
    public DailyChecklistResponse getDailyChecklists(String boardId, LocalDate date, String userId) {
        validateBoardAccess(boardId, userId);

        List<DailyChecklist> items = dailyChecklistRepository
            .findByBoardIdAndAssignedDateOrderByPositionAsc(boardId, date);

        // 멤버별로 그룹화
        Map<String, List<DailyChecklist>> grouped = items.stream()
            .collect(Collectors.groupingBy(dc -> dc.getAssignee().getId()));

        List<DailyChecklistColumnResponse> columns = grouped.entrySet().stream()
            .map(entry -> {
                User member = entry.getValue().get(0).getAssignee();
                return DailyChecklistColumnResponse.builder()
                    .member(mapToMemberInfo(member))
                    .items(entry.getValue().stream().map(this::mapToItemResponse).toList())
                    .build();
            })
            .toList();

        return DailyChecklistResponse.builder()
            .date(date)
            .columns(columns)
            .build();
    }

    /**
     * 기존 체크리스트 항목을 데일리 체크리스트에 추가
     */
    @Transactional
    public DailyChecklistItemResponse addItem(
        String boardId,
        String checklistItemId,
        LocalDate assignedDate,
        String userId
    ) {
        validateBoardAccess(boardId, userId);

        // 중복 체크
        if (dailyChecklistRepository.existsByBoardIdAndChecklistItemIdAndAssignedDate(
            boardId, checklistItemId, assignedDate)) {
            throw new BadRequestException("이미 추가된 항목입니다");
        }

        ChecklistItem checklistItem = checklistItemRepository.findById(checklistItemId)
            .orElseThrow(() -> new ResourceNotFoundException("체크리스트를 찾을 수 없습니다"));

        User assignee = checklistItem.getAssignee();
        if (assignee == null) {
            throw new BadRequestException("담당자가 지정되지 않은 체크리스트입니다");
        }

        // position 계산 (해당 담당자의 마지막 위치 + 1)
        Integer maxPosition = dailyChecklistRepository
            .findMaxPositionByBoardIdAndAssignedDateAndAssigneeId(
                boardId, assignedDate, assignee.getId());
        int newPosition = (maxPosition != null ? maxPosition : -1) + 1;

        Board board = boardRepository.findById(boardId)
            .orElseThrow(() -> new ResourceNotFoundException("보드를 찾을 수 없습니다"));

        DailyChecklist dailyChecklist = DailyChecklist.create(
            board, checklistItem, assignee, assignedDate, newPosition);

        dailyChecklistRepository.save(dailyChecklist);

        return mapToItemResponse(dailyChecklist);
    }

    /**
     * 새 체크리스트를 생성하면서 데일리 체크리스트에 추가
     */
    @Transactional
    public DailyChecklistItemResponse addWithNewItem(
        String boardId,
        String taskId,
        String title,
        String assigneeId,
        LocalDate assignedDate,
        String userId
    ) {
        validateBoardAccess(boardId, userId);

        // 새 ChecklistItem 생성
        Task task = taskRepository.findById(taskId)
            .orElseThrow(() -> new ResourceNotFoundException("Task를 찾을 수 없습니다"));

        User assignee = userRepository.findById(assigneeId)
            .orElseThrow(() -> new ResourceNotFoundException("사용자를 찾을 수 없습니다"));

        ChecklistItem newItem = ChecklistItem.create(task, title, assignee);
        checklistItemRepository.save(newItem);

        // 데일리 체크리스트에 추가
        return addItem(boardId, newItem.getId(), assignedDate, userId);
    }

    /**
     * 우선순위(position) 변경
     */
    @Transactional
    public void updatePosition(
        String boardId,
        String dailyChecklistId,
        Integer newPosition,
        String userId
    ) {
        validateBoardAccess(boardId, userId);

        DailyChecklist target = dailyChecklistRepository.findById(dailyChecklistId)
            .orElseThrow(() -> new ResourceNotFoundException("항목을 찾을 수 없습니다"));

        if (!target.getBoard().getId().equals(boardId)) {
            throw new ForbiddenException("권한이 없습니다");
        }

        int oldPosition = target.getPosition();
        if (oldPosition == newPosition) {
            return; // 변경 없음
        }

        // 같은 담당자, 같은 날짜의 항목들만 대상
        List<DailyChecklist> sameGroupItems = dailyChecklistRepository
            .findByBoardIdAndAssignedDateAndAssigneeIdOrderByPositionAsc(
                boardId,
                target.getAssignedDate(),
                target.getAssignee().getId()
            );

        // 범위 체크
        int maxPosition = sameGroupItems.size() - 1;
        newPosition = Math.max(0, Math.min(newPosition, maxPosition));

        // position 재계산
        if (oldPosition < newPosition) {
            // 아래로 이동: oldPosition < p <= newPosition인 항목들의 position을 -1
            for (DailyChecklist item : sameGroupItems) {
                int pos = item.getPosition();
                if (pos > oldPosition && pos <= newPosition) {
                    item.updatePosition(pos - 1);
                }
            }
        } else {
            // 위로 이동: newPosition <= p < oldPosition인 항목들의 position을 +1
            for (DailyChecklist item : sameGroupItems) {
                int pos = item.getPosition();
                if (pos >= newPosition && pos < oldPosition) {
                    item.updatePosition(pos + 1);
                }
            }
        }

        target.updatePosition(newPosition);
    }

    /**
     * 데일리 체크리스트에서 제거 (원본 체크리스트는 유지)
     */
    @Transactional
    public void removeItem(String boardId, String dailyChecklistId, String userId) {
        validateBoardAccess(boardId, userId);

        DailyChecklist target = dailyChecklistRepository.findById(dailyChecklistId)
            .orElseThrow(() -> new ResourceNotFoundException("항목을 찾을 수 없습니다"));

        if (!target.getBoard().getId().equals(boardId)) {
            throw new ForbiddenException("권한이 없습니다");
        }

        dailyChecklistRepository.delete(target);

        // 삭제된 항목 이후의 position 재정렬
        List<DailyChecklist> remaining = dailyChecklistRepository
            .findByBoardIdAndAssignedDateAndAssigneeIdOrderByPositionAsc(
                boardId,
                target.getAssignedDate(),
                target.getAssignee().getId()
            );

        int position = 0;
        for (DailyChecklist item : remaining) {
            item.updatePosition(position++);
        }
    }
}
```

### 5.2 AuthService - 이메일 인증

```java
@Transactional
public void verifyEmail(String token) {
    EmailVerificationToken verificationToken = emailVerificationTokenRepository
        .findByToken(token)
        .orElseThrow(() -> new BadRequestException("유효하지 않은 인증 토큰입니다"));

    if (!verificationToken.isValid()) {
        if (verificationToken.isExpired()) {
            throw new BadRequestException("만료된 인증 토큰입니다");
        }
        throw new BadRequestException("이미 사용된 인증 토큰입니다");
    }

    User user = verificationToken.getUser();
    user.verifyEmail();
    verificationToken.markAsUsed();

    userRepository.save(user);
    emailVerificationTokenRepository.save(verificationToken);
}

@Transactional
public void resendVerificationEmail(String email) {
    User user = userRepository.findByEmail(email)
        .orElseThrow(() -> new BadRequestException("존재하지 않는 이메일입니다"));

    if (user.getEmailVerified()) {
        throw new BadRequestException("이미 인증된 이메일입니다");
    }

    emailVerificationTokenRepository.deleteByUserId(user.getId());

    EmailVerificationToken token = EmailVerificationToken.create(user, 24);
    emailVerificationTokenRepository.save(token);

    emailService.sendVerificationEmail(user.getEmail(), token.getToken());
}
```

### 5.3 AuthService - 비밀번호 재설정

```java
@Transactional
public void requestPasswordReset(String email) {
    userRepository.findByEmail(email).ifPresent(user -> {
        passwordResetTokenRepository.deleteByUserId(user.getId());

        PasswordResetToken token = PasswordResetToken.create(user, 1); // 1시간
        passwordResetTokenRepository.save(token);

        emailService.sendPasswordResetEmail(user.getEmail(), token.getToken());
    });
    // 보안상 존재하지 않는 이메일에도 동일 응답
}

@Transactional
public void resetPassword(String token, String newPassword) {
    PasswordResetToken resetToken = passwordResetTokenRepository
        .findByToken(token)
        .orElseThrow(() -> new BadRequestException("유효하지 않은 토큰입니다"));

    if (!resetToken.isValid()) {
        throw new BadRequestException("만료되었거나 이미 사용된 토큰입니다");
    }

    validatePassword(newPassword);

    User user = resetToken.getUser();
    user.updatePassword(passwordEncoder.encode(newPassword));
    resetToken.markAsUsed();

    userRepository.save(user);
    passwordResetTokenRepository.save(resetToken);
}

private void validatePassword(String password) {
    if (password.length() < 8) {
        throw new BadRequestException("비밀번호는 8자 이상이어야 합니다");
    }
    if (!password.matches(".*[a-zA-Z].*") || !password.matches(".*[0-9].*")) {
        throw new BadRequestException("비밀번호는 영문자와 숫자를 포함해야 합니다");
    }
}
```

### 5.4 WeightLevelService

```java
@Transactional
public BoardWeightSettings getWeightLevels(String boardId, String userId) {
    validateBoardAccess(boardId, userId);

    List<WeightLevel> levels = weightLevelRepository.findByBoardIdOrderByPositionAsc(boardId);

    if (levels.isEmpty()) {
        levels = createDefaultWeightLevels(boardId);
    }

    WeightLevel defaultLevel = levels.stream()
        .filter(WeightLevel::getIsDefault)
        .findFirst()
        .orElse(levels.get(0));

    return BoardWeightSettings.builder()
        .board_id(boardId)
        .levels(levels.stream().map(this::mapToLevelInfo).toList())
        .default_level_id(defaultLevel.getId())
        .build();
}

private List<WeightLevel> createDefaultWeightLevels(String boardId) {
    Board board = boardRepository.findById(boardId)
        .orElseThrow(() -> new ResourceNotFoundException("보드를 찾을 수 없습니다"));

    List<WeightLevel> defaults = List.of(
        WeightLevel.builder().board(board).name("Low").weight(0.5).color("slate").position(0).isDefault(false).build(),
        WeightLevel.builder().board(board).name("Medium").weight(1.0).color("blue").position(1).isDefault(true).build(),
        WeightLevel.builder().board(board).name("High").weight(1.5).color("amber").position(2).isDefault(false).build(),
        WeightLevel.builder().board(board).name("Critical").weight(2.0).color("red").position(3).isDefault(false).build()
    );

    return weightLevelRepository.saveAll(defaults);
}
```

---

## 6. 데이터베이스 마이그레이션

### 6.1 v9.0 마이그레이션 SQL

```sql
-- 데일리 체크리스트 테이블
CREATE TABLE daily_checklists (
    id VARCHAR(36) PRIMARY KEY,
    board_id VARCHAR(36) NOT NULL REFERENCES boards(id) ON DELETE CASCADE,
    checklist_item_id VARCHAR(36) REFERENCES checklist_items(id) ON DELETE SET NULL,
    assignee_id VARCHAR(36) NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    assigned_date DATE NOT NULL,
    position INTEGER NOT NULL DEFAULT 0,
    title VARCHAR(200) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UNIQUE(board_id, checklist_item_id, assigned_date)
);

-- 인덱스
CREATE INDEX idx_daily_checklists_board_date ON daily_checklists(board_id, assigned_date);
CREATE INDEX idx_daily_checklists_assignee ON daily_checklists(assignee_id);
CREATE INDEX idx_daily_checklists_checklist_item ON daily_checklists(checklist_item_id);
```

### 6.2 v8.0 마이그레이션 SQL (참고)

```sql
-- 사용자 테이블 확장
ALTER TABLE users ADD COLUMN email_verified BOOLEAN NOT NULL DEFAULT false;
ALTER TABLE users ADD COLUMN email_verified_at TIMESTAMP;
ALTER TABLE users ADD COLUMN theme VARCHAR(20) DEFAULT 'dark';

-- 이메일 인증 토큰 테이블
CREATE TABLE email_verification_tokens (
    id VARCHAR(36) PRIMARY KEY,
    user_id VARCHAR(36) NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    token VARCHAR(64) NOT NULL UNIQUE,
    expires_at TIMESTAMP NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    used_at TIMESTAMP
);

-- 비밀번호 재설정 토큰 테이블
CREATE TABLE password_reset_tokens (
    id VARCHAR(36) PRIMARY KEY,
    user_id VARCHAR(36) NOT NULL REFERENCES users(id) ON DELETE CASCADE,
    token VARCHAR(64) NOT NULL UNIQUE,
    expires_at TIMESTAMP NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    used_at TIMESTAMP
);

-- 가중치 레벨 테이블
CREATE TABLE weight_levels (
    id VARCHAR(36) PRIMARY KEY,
    board_id VARCHAR(36) NOT NULL REFERENCES boards(id) ON DELETE CASCADE,
    name VARCHAR(50) NOT NULL,
    weight DECIMAL(4,2) NOT NULL,
    color VARCHAR(20),
    position INTEGER NOT NULL DEFAULT 0,
    is_default BOOLEAN NOT NULL DEFAULT false,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Task 가중치 테이블
CREATE TABLE task_weights (
    id VARCHAR(36) PRIMARY KEY,
    task_id VARCHAR(36) NOT NULL REFERENCES tasks(id) ON DELETE CASCADE,
    weight_level_id VARCHAR(36) NOT NULL REFERENCES weight_levels(id),
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    UNIQUE(task_id)
);
```

---

## 변경 이력

| 버전 | 날짜 | 주요 변경 |
|------|------|----------|
| v7.0 | 2026-01-13 | Task.assignee 제거, MilestoneAllocation 추가, Task.estimatedMinutes 추가 |
| v8.0 | 2026-01-15 | EmailVerificationToken, PasswordResetToken, WeightLevel, TaskWeight 추가, User.theme 필드 |
| v9.0 | 2026-01-17 | DailyChecklist 엔티티 및 API 추가 |

---

**문서 버전**: 9.0
**최종 수정**: 2026년 1월 17일
